fix: textarea word-spacing

--- a/src/page/capture/CaptureCertificationPage.scss
+++ b/src/page/capture/CaptureCertificationPage.scss
@@ -142,6 +142,7 @@
     border-radius: 5px;
     border: none;
     resize: none;
+    word-spacing: -3px;
     &::placeholder {
       color: #8a8a8a;
     }
