--- a/src/page/capture/CaptureLocationPage.scss
+++ b/src/page/capture/CaptureLocationPage.scss
@@ -177,9 +177,7 @@
   background-color: white;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   font-size: 12px;
   font-weight: 700;
-  line-height: 18px;
-  letter-spacing: 0em;
 }
